--- a/main.scss
+++ b/main.scss
@@ -171,6 +171,7 @@ html {
             right: 0.2em;
             height: 90%;
             justify-content: center;
+            z-index: 1;
             button {
                 width: 2em;
                 height: 0.5em;
